Infinite loop protection in panel nodes.
#459078: Provide the "read more" flag for teasers of panel nodes.
Fix broken styling when dragging a panel pane.
Integrate with CTools tab system so we can add edit tabs to all our panel pages.
#454208: pgsql does not support concat(), so use || instead for postgres.
#445828: Remove "Settings" link if a content type has no settings form.

Panels 6.x-3.0-beta1
====================

#422712: Panel page import button went to wrong place.
#423288: Profile template plugin had wrong path.
#424176: Panel nodes: Remove unused layout screen, fix some notice errors, give context a description.
New simpler panel page task that doesn't bother with handlers at all.
#317121: Respect 'hide title' option in display settings.
#422404: Update to exportables left mini panels kind of broken.
#422180 by joshk: Fix panel node_access to accept incoming $account.
Moved content types to CTools.
Better add content dialog.
#437742 by jcmarco: Missing include.
#440142 by jcmarco: Did not change panels_get_content_types to ctools_get_content_types.
Add a live preview widget to the panel content edit page.
Fix panel page type to actually respect the contexts.
Upgrades from as far back as Drupal 5 can now be supported.
Rearranged the menus, created the Panel dashboard.
Returned the allowed content settings form to panel page
Added allowed layouts to settings form for panel pages, nodes, minis.
#362754 by dereine: Fix invalid XHTML in 3col 33/34/33 template.
#375686: Create panels_get_current_page_display() to replace the old panels_get_current_page() function.
#424798: Respond to a cloned handler by properly cloning the display as well.
#424290: Ensure content.inc is loaded during panels display save so that everything can be found.
#422090: Ensure the first item added to a row is fluid. Fixed can then be added after that.

Panels 6.x-3.0-alpha3
=====================
Note: This changelog is incomplete, as it was started sometime after alpha2.ls
